tests/baselines/reference/interfacedeclWithPredicatesObjectError1.errors.txt
tests/cases/compiler/interfacedeclWithPredicatesObjectError1.ts(12,5): error TS2322: Type '{ text: string; }' is not assignable to type 'PrivateMessage'.
  Predicate or(and(present(userid),not(present(screenname))),and(present(screenname),not(present(userid)))) was not satisfied in type { text: string; }


==== tests/cases/compiler/interfacedeclWithPredicatesObjectError1.ts (1 errors) ====
    
    interface PrivateMessage{
        userid?: any;
        screenname?: any;
        text?: any;
    } with {
        or(and(present(userid), not(present(screenname))),
        and(present(screenname), not(present(userid))));
    present(text);
    }
    
    let object: PrivateMessage = {text: "text"};
        ~~~~~~
!!! error TS2322: Type '{ text: string; }' is not assignable to type 'PrivateMessage'.
!!! error TS2322:   Predicate or(and(present(userid),not(present(screenname))),and(present(screenname),not(present(userid)))) was not satisfied in type { text: string; }